[gd_scene load_steps=2 format=3 uid="uid://nwc3ncocmpt1"]

[ext_resource type="Script" uid="uid://dhxgwmbf5rdes" path="res://Menus/Pause/pause_menu.gd" id="1_nfgic"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nfgic")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resumir"

[node name="Inventory" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Inventário"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Opções"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
